microservice-parent/appA/deployment/dashboard-ingress.yaml
# https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
# https://kubernetes.io/docs/concepts/services-networking/ingress/

# minikube addons enable ingress
# minikube kubectl -- get ns
# minikube kubectl -- get all -n kubernetes-dashboard

# minikube kubectl -- apply -f .\dashboard-ingress.yaml
#   ingress.networking.k8s.io/dashboard-ingress created
# minikube kubectl -- get ingress
# C:\Windows\System32\drivers\etc\hosts
#   172.25.63.114 dashboard.local

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
spec:
  rules:
    - host: dashboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
